# mda_tutorials_2025

./: .gitignore  convert_tutorial.py  main.py  pyproject.toml  ref_rag.ipynb  tutorial_10 copy.py  tutorial_10.py  tutorial_11 copy.py  tutorial_11.py  tutorial_12.py  tutorial_13.py  tutorial_2.py  tutorial_3.py  tutorial_4.py  tutorial_6.py  tutorial_7.py  tutorial_8.ipynb  tutorial_8.py  tutorial_9.py  week10_tutorial.ipynb  week11_tutorial.ipynb  week12_tutorial.ipynb  week7_tutotrial.ipynb  week8_tutorial.ipynb  week9_tutorial.ipynb
tests/: test_tutorial_10.py  test_tutorial_12_headless.py  test_tutorial_9.py
